# dio-bank

./: .gitgnore  README.md  pyproject.toml  render-deploy.sh
instance/: blog.sqlite
migrations/versions/: 1e275ecadb1d_add_password_field.py  720217daec90_inicial_migration.py
src/: app.py  schema.sql  utils.py
src/controllers/: auth.py  role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
