[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "princisval", email = "christhian.spsilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4"  # ✅ Mudança para garantir compatibilidade com flask-jwt-extended
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",  # ✅ Mantemos apenas o flask-jwt-extended
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest",
    "pytest-mock",
    "psycopg2-binary",
    "gunicorn"
]

[tool.pytest.ini_options]  # ✅ Agora está corretamente separado
minversion = "6.0"
addopts = "-ra -vvv"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["princisval <christhian.spsilva@gmail.com>"]

[tool.poetry.dependencies]
flask = "^2.0"
flask-sqlalchemy = "^2.5"
flask-migrate = "^3.1"
flask-jwt-extended = ">=4.7.1,<5.0.0"
pyjwt = ">=2.10.1,<3.0.0"
psycopg2-binary = "^2.9"
gunicorn = "^20.1"

