[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["princisval <christhian.spsilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"  # ✅ Agora está na seção correta
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = ">=4.7.1,<5.0.0"
pyjwt = ">=2.10.1,<3.0.0"
pytest = "*"
pytest-mock = "*"
psycopg2-binary = "*"
gunicorn = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vvv"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"